# nodesify-graphify

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  REARCHITECTURE.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json
.opencode/plugins/: graphify.js
crates/graphify-analyze/: Cargo.toml
crates/graphify-analyze/src/: lib.rs
crates/graphify-build/: Cargo.toml
crates/graphify-build/src/: lib.rs
crates/graphify-cluster/: Cargo.toml
crates/graphify-cluster/src/: lib.rs
crates/graphify-core/: Cargo.toml
crates/graphify-core/src/: db.rs  error.rs  lib.rs  security.rs  types.rs
crates/graphify-detect/: Cargo.toml
crates/graphify-detect/src/: lib.rs
crates/graphify-extract/: Cargo.toml
crates/graphify-extract/src/: engine.rs  lib.rs  schema.rs
crates/graphify-extract/src/langs/: c.rs  c_sharp.rs  config.rs  css.rs  dart.rs  elixir.rs  go.rs  haskell.rs  java.rs  javascript.rs  kotlin.rs  lua.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  shell.rs  swift.rs  typescript.rs  zig.rs
crates/graphify-ingest/: Cargo.toml
crates/graphify-ingest/src/: lib.rs
crates/graphify-napi/: Cargo.toml
crates/graphify-napi/src/: export_graphml.rs  export_html.rs  lib.rs  merge.rs  pipeline.rs  query.rs
crates/graphify-napi/tests/: pipeline_test.rs
crates/graphify-paths/: Cargo.toml
crates/graphify-paths/src/: lib.rs
crates/graphify-pdf/: Cargo.toml
crates/graphify-pdf/src/: lib.rs
crates/graphify-report/: Cargo.toml
crates/graphify-report/src/: lib.rs
crates/graphify-semantic/: Cargo.toml
crates/graphify-semantic/src/: lib.rs
docs/superpowers/plans/: 2026-04-30-nodesify-graphify-implementation.md  2026-05-01-cross-platform-support.md
docs/superpowers/specs/: 2026-04-30-nodesify-graphify-rewrite-design.md  2026-05-01-cross-platform-support-design.md
tests/fixtures/c/: sample.c
tests/fixtures/cpp/: sample.cpp
tests/fixtures/go/: sample.go
tests/fixtures/java/: Sample.java
tests/fixtures/javascript/: sample.js
tests/fixtures/python/: sample.py
tests/fixtures/rust/: sample.rs
tests/fixtures/typescript/: sample.ts
