[workspace]
resolver = "2"
members = [
    "crates/graphify-core",
    "crates/graphify-detect",
    "crates/graphify-extract",
    "crates/graphify-build",
    "crates/graphify-cluster",
    "crates/graphify-analyze",
    "crates/graphify-report",
    "crates/graphify-napi",
]

[workspace.dependencies]
graphify-core = { path = "crates/graphify-core" }
graphify-detect = { path = "crates/graphify-detect" }
graphify-extract = { path = "crates/graphify-extract" }
graphify-build = { path = "crates/graphify-build" }
graphify-cluster = { path = "crates/graphify-cluster" }
graphify-analyze = { path = "crates/graphify-analyze" }
graphify-report = { path = "crates/graphify-report" }
rusqlite = { version = "0.34", features = ["bundled"] }
petgraph = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
