[workspace]
resolver = "2"
members = [
    "crates/graphify-core",
    "crates/graphify-paths",
    "crates/graphify-detect",
    "crates/graphify-extract",
    "crates/graphify-build",
    "crates/graphify-cluster",
    "crates/graphify-analyze",
    "crates/graphify-report",
    "crates/graphify-napi",
    "crates/graphify-semantic",
    "crates/graphify-ingest",
    "crates/graphify-pdf",
]

[workspace.dependencies]
graphify-core = { path = "crates/graphify-core" }
graphify-paths = { path = "crates/graphify-paths" }
graphify-detect = { path = "crates/graphify-detect" }
graphify-extract = { path = "crates/graphify-extract" }
graphify-build = { path = "crates/graphify-build" }
graphify-cluster = { path = "crates/graphify-cluster" }
graphify-analyze = { path = "crates/graphify-analyze" }
graphify-report = { path = "crates/graphify-report" }
graphify-semantic = { path = "crates/graphify-semantic" }
graphify-ingest = { path = "crates/graphify-ingest" }
graphify-pdf = { path = "crates/graphify-pdf" }
rusqlite = { version = "0.34", features = ["bundled"] }
petgraph = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
walkdir = "2"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.26"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-haskell = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-bash = "0.25"
tree-sitter-dart = "0.2"
tree-sitter-zig = "1.1"
tree-sitter-css = "0.25"
tree-sitter-kotlin-ng = "1.1"
ureq = "3"
pdf-extract = "0.7"
