[package]
name = "graphify-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
graphify-core = { workspace = true }
graphify-paths = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
