[package]
name = "graphify-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
graphify-core = { workspace = true }
graphify-paths = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-kotlin = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-haskell = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-dart = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-css = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
