[package]
name = "graphify-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
graphify-core = { workspace = true }
graphify-detect = { workspace = true }
graphify-extract = { workspace = true }
graphify-build = { workspace = true }
graphify-cluster = { workspace = true }
graphify-analyze = { workspace = true }
graphify-report = { workspace = true }
graphify-paths = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"
